--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,16 @@
         <node.version>v6.10.1</node.version>
         <swagger.version>1.5.13</swagger.version>
 
-        <eds-api.version>1.0-SNAPSHOT</eds-api.version>
-        <eds-core.version>1.0-SNAPSHOT</eds-core.version>
-        <eds-security.version>1.0-SNAPSHOT</eds-security.version>
+        <eds-api.version>1.4-SNAPSHOT</eds-api.version>
+        <eds-core.version>1.27-SNAPSHOT</eds-core.version>
+        <eds-transforms.version>1.50-SNAPSHOT</eds-transforms.version>
 
         <aspectj.version>1.8.9</aspectj.version>
         <aspectj-metrics.version>1.2.0</aspectj-metrics.version>
         <dropwizard-metrics.version>3.1.0</dropwizard-metrics.version>
         <jersey.version>2.22.1</jersey.version>
         <keycloak.version>2.0.0.Final</keycloak.version>
+        <postgresql.version>9.4.1212.jre7</postgresql.version>
         <servlet.version>3.1.0</servlet.version>
     </properties>
 
