--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "eds-angular4": "https://github.com/endeavourhealth-discovery/Angular4/raw/master/eds-angular4-1.0.19.tgz",
     "font-awesome": "^4.7.0",
+    "moment": "^2.19.1",
     "ng2-archwizard": "^1.6.0",
     "ng2-linq": "^1.0.0",
     "rxjs": "^5.1.0",
