--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
-    "build-prod": "ng build -prod",
+    "build-prod": "ng build --env=prod --no-sourcemap",
     "test": "ng test",
     "lint": "ng lint --type-check",
     "e2e": "ng e2e --proxy-config proxy.conf.json"
@@ -28,9 +28,6 @@
     "core-js": "^2.4.1",
     "eds-angular4": "https://github.com/endeavourhealth-discovery/Angular4/raw/master/eds-angular4-1.0.20.tgz",
     "font-awesome": "^4.7.0",
-    "moment": "^2.19.1",
-    "ng2-archwizard": "^1.6.0",
-    "ng2-linq": "^1.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
