--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -7,6 +7,7 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "build-prod": "ng build --env=prod --no-sourcemap",
+    "build-aot": "ng build -prod --verbose",
     "test": "ng test",
     "lint": "ng lint --type-check",
     "e2e": "ng e2e --proxy-config proxy.conf.json"
@@ -28,16 +29,18 @@
     "core-js": "^2.4.1",
     "eds-angular4": "https://github.com/endeavourhealth-discovery/Angular4/raw/master/eds-angular4-1.0.20.tgz",
     "font-awesome": "^4.7.0",
+    "keycloak-js": "^3.1.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.0",
-    "@angular/compiler-cli": "4.2.6",
-    "@angular/language-service": "4.2.6",
-    "@types/jasmine": "2.5.45",
+    "@angular/cli": "1.4.7",
+    "@angular/compiler-cli": "^4.2.4",
+    "@angular/language-service": "^4.2.4",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
+    "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -46,10 +49,9 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "keycloak-js": "^3.1.0",
     "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
     "typescript": "~2.3.3"
   }
 }
