--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,7 +8,7 @@
     "build": "ng build",
     "build-prod": "ng build --env=prod --no-sourcemap",
     "build-aot": "ng build -prod --verbose",
-    "test": "ng test",
+    "test": "ng test --sourcemaps=false",
     "lint": "ng lint --type-check",
     "e2e": "ng e2e --proxy-config proxy.conf.json"
   },
