--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "build-prod": "ng build --env=prod --no-sourcemap",
-    "build-aot": "ng build -prod --verbose",
+    "build-aot": "ng build -prod",
     "test": "ng test --sourcemaps=false",
     "lint": "ng lint --type-check",
     "e2e": "ng e2e --proxy-config proxy.conf.json"
