Fix API output folder name

--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 files:
   - source: /FrontEnd/dist
     destination: //opt/tomcat/webapps/data-validation
-  - source: /API/target/API-0.0.1
+  - source: /API/target/API-1.0-SNAPSHOT
     destination: //opt/tomcat/webapps/data-validation
 hooks:
   ApplicationStop:
