--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,5 +18,5 @@ artifacts:
   files:
     - appspec.yml
     - aws_scripts/**/*
-    - API/target/API-0.0.1/**/*
+    - API/target/API-1.0-SNAPSHOT/**/*
     - FrontEnd/dist/**/*
