--- a/API/pom.xml
+++ b/API/pom.xml
@@ -170,6 +170,21 @@
             <version>${aspectj.version}</version>
         </dependency>
         <!-- End DropWizard -->
+
+        <!-- Cucumber testing -->
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-java8</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- End Cucumber testing -->
     </dependencies>
 
     <build>
