--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <cucumber.version>1.2.5</cucumber.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <frontend-maven-plugin.version>1.4</frontend-maven-plugin.version>
         <node.version>v6.10.1</node.version>
