--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build --prod",
+    "build": "ng build --environment=prod",
     "test": "ng test --sourcemaps=false",
     "lint": "ng lint --type-check",
     "e2e": "ng e2e --proxy-config proxy.conf.json"
