--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -49,6 +49,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "protractor-fail-fast": "^3.0.2",
+    "puppeteer": "^1.0.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.3.3"
