--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,9 @@
 version: 0.2
 
 phases:
+  install:
+    commands:
+      - apt-get install libxss1
   pre_build:
     commands:
       - IP=$(curl http://checkip.amazonaws.com)/32
