--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - apt-get install libxss1
+      - apt-get -y install libXss1+
   pre_build:
     commands:
       - IP=$(curl http://checkip.amazonaws.com)/32
