--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
+      - apt-get -y update
       - apt-get -y install libXss1+
   pre_build:
     commands:
