Change to run test via ng (instead of direct karma)

--- a/FrontEnd/pom.xml
+++ b/FrontEnd/pom.xml
@@ -56,8 +56,12 @@
           <execution>
             <id>javascript tests</id>
             <goals>
-              <goal>karma</goal>
+              <goal>npm</goal>
             </goals>
+            <configuration>
+              <arguments>run test</arguments>
+              <!--<failOnError>true</failOnError>-->
+            </configuration>
             <phase>test</phase>
           </execution>
         </executions>
