--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - apt-get -y update
-      - apt-get -y install chromium-browser
+      - apt-get -y install chromium-browser=49.0.2623.108-0ubuntu1.1233
   pre_build:
     commands:
       - IP=$(curl http://checkip.amazonaws.com)/32
