Add missing dependency

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - apt-get -y update
-      - apt-get -y install chromium-codecs-ffmpeg-extra
+      - apt-get -y install chromium-codecs-ffmpeg-extra=34.0.1847.116-0ubuntu2
       - apt-get -y install chromium-browser=34.0.1847.116-0ubuntu2
   pre_build:
     commands:
