--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,12 @@
 version: 0.2
 
 phases:
-  install:
-    commands:
-      - apt-get -y update
-      - apt-get -y install chromium-codecs-ffmpeg-extra=34.0.1847.116-0ubuntu2
-      - apt-get -y install chromium-browser=34.0.1847.116-0ubuntu2
-      - export DISPLAY=:0.0
+#  install:
+#    commands:
+#      - apt-get -y update
+#      - apt-get -y install chromium-codecs-ffmpeg-extra=34.0.1847.116-0ubuntu2
+#      - apt-get -y install chromium-browser=34.0.1847.116-0ubuntu2
+#      - export DISPLAY=:0.0
   pre_build:
     commands:
       - IP=$(curl http://checkip.amazonaws.com)/32
