--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -23,11 +23,13 @@
     "@angular/platform-server": "4.3.4",
     "@angular/router": "4.2.6",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.26",
+    "angular-tree-component": "^7.0.1",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "eds-angular4": "https://github.com/endeavourhealth-discovery/Angular4/raw/master/eds-angular4-1.0.26.tgz",
     "font-awesome": "^4.7.0",
     "keycloak-js": "^3.1.0",
+    "primeng": "^4.3.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
