--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,9 +20,11 @@ phases:
       - IP=$(curl http://checkip.amazonaws.com)/32
       - echo $IP of CodeBuild Instance
       - echo Build completed on `date`
+      - aws_scripts/make-badges.sh
 artifacts:
   files:
     - appspec.yml
     - aws_scripts/**/*
     - API/target/API-1.0-SNAPSHOT/**/*
     - FrontEnd/dist/**/*
+    - badges/**/*
