--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,18 +14,16 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn -B package
+      - chmod +x aws_scripts/build.sh
+      - aws_scripts/build.sh
   post_build:
     commands:
       - IP=$(curl http://checkip.amazonaws.com)/32
       - echo $IP of CodeBuild Instance
       - echo Build completed on `date`
-      - chmod +x aws_scripts/make-badges.sh
-      - aws_scripts/make-badges.sh
 artifacts:
   files:
     - appspec.yml
     - aws_scripts/**/*
     - API/target/API-1.0-SNAPSHOT/**/*
     - FrontEnd/dist/**/*
-    - badges/**/*
