--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
     commands:
       - echo Build started on `date`
       - chmod +x aws_scripts/build.sh
-      - aws_scripts/build.sh
+      - aws_scripts/build.sh mvn -B package
   post_build:
     commands:
       - IP=$(curl http://checkip.amazonaws.com)/32
